# DEMO

./: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
public/: global.css  spwn_web_bg.wasm
spwn-web/: Cargo.toml
src/: App.svelte  constants.ts  main.ts  test.js
src/objects/: object.ts  regular.ts  special.ts  triggers.ts
src/sketch/: sketch.ts
src/world/: objectHandler.ts  world.ts
